test/spec_vectors/load/fail/module_19.wat
(module (memory 1) (func $load_i64 (i64.load (i32.const 0))))